<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="tads.eaj.ufrn.segundaprova.DetalhesFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detalhesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetalhesFragment">

        <TextView
            android:id="@+id/detalhesNomeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detalhesSobrenomeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/sobrenome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhesNomeTV" />

        <TextView
            android:id="@+id/detalhesIdadeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/idade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhesSobrenomeTV" />

        <TextView
            android:id="@+id/detalhesSexoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/sexo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhesIdadeTV" />

        <TextView
            android:id="@+id/detalhesAlturaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/altura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhesSexoTV" />

        <TextView
            android:id="@+id/detalhesPesoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhesAlturaTV" />

        <TextView
            android:id="@+id/detalhesNomeEdit"
            android:text="@{viewModel.pessoa.nome}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesNomeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesNomeTV" />

        <TextView
            android:id="@+id/detalhesSobrenomeEdit"
            android:text="@{viewModel.pessoa.sobrenome}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesSobrenomeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesSobrenomeTV" />

        <TextView
            android:id="@+id/detalhesIdadeEdit"
            android:text="@{``+viewModel.pessoa.idade}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesIdadeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesIdadeTV" />

        <TextView
            android:id="@+id/detalhesSexoEdit"
            android:text="@{viewModel.pessoa.sexo}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesSexoTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesSexoTV" />

        <TextView
            android:id="@+id/detalhesAlturaEdit"
            android:text="@={``+viewModel.pessoa.altura}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesAlturaTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesAlturaTV" />

        <TextView
            android:id="@+id/detalhesPesoEdit"
            android:text="@{``+viewModel.pessoa.peso}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/detalhesPesoTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detalhesPesoTV"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>